2005-06-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mysql/gda-mysql-recordset.c (gda_mysql_recordset_update_row):
	removed invalid g_free call.

2005-06-30  Stanislav Brabec <sbrabec@suse.de>

	* libgda/gda-data-model.c (gda_data_model_set_command_text,
	gda_data_model_set_command_type):
	* libgda/gda-config.c (gda_config_set_string, gda_config_set_int,
	gda_config_set_float, gda_config_set_boolean,
	gda_config_save_data_source, gda_config_save_data_source_info):
	fixed return values.

	* providers/ldap/libmain.c:
	* providers/mysql/libmain.c:
	* providers/odbc/libmain.c:
	* providers/sqlite/libmain.c:
	* providers/xml/libmain.c: added missing header files.

2005-06-25  Bas Driessen <bas.driessen@xobas.com>

	* providers/mysql/libmain.c
	(plugin_get_dsn_spec): use correct data type
	gsize rather than gint when calling function
	g_file_get_contents. The x86_64 platform is 
	very picky about this and crashes with a 
	segmentation fault.

	* providers/postgres/libmain.c
	(plugin_get_dsn_spec): idem.

	* providers/sqlite/libmain.c
	(plugin_get_dsn_spec): idem.

2005-06-24  Bas Driessen <bas.driessen@xobas.com>

	* libgda/Makefile.am: Replace hardcoded "lib"
	with $(libdir) so it works OK on 64 bit platforms
	where "lib64" is used.

	* providers/bdb/gda-bdb-recordset.c: Cater for bdb 
	versions > 4.3.x 

2005-06-18  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #307549

	* libgda/gda-config.c:
	* configure.in: s/debug/GDA_DEBUG to avoid weird substitions on MySQL
	headers.

2005-06-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda-2.0.pc.in:
	* Makefile.am: use fixed 2.0 for pkg-config.

2005-06-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: install libgda-x.x.pc instead of just libgda.pc.

2005-06-14  Alex <alex@igalia.com>

	* providers/postgres/gda-postgres-recordset.c (guess_table_name):
	fixed leak on query string.

2005-06-06  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.3.3.

2005-06-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: