@@ -1,3 +1,11 @@
+2005-07-01  Vivien Malerba <malerba@gnome-db.org>
+	
+	* libgda/gda-config.c: bug fixed in gda_data_source_info_equal()
+	* libgda/gda-client.[ch]: added gda_client_get_dsn_specs()
+	* libgda/gda-config.c: bug fixed when saving global config file
+	* libgda/gda-threader.[ch]: use GType for GObject, not guint
+	* doc/C: doc update
+
 2005-06-30  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* providers/mysql/gda-mysql-recordset.c (gda_mysql_recordset_update_row):
